First attempt to retain compatibility